Fix spacing

--- a/src/components/Nav/ExpandingMenuButton/MenuLink.less
+++ b/src/components/Nav/ExpandingMenuButton/MenuLink.less
@@ -48,7 +48,7 @@ li.MenuLink {
     }
 
     .typo-normal {
-        @firstChildPercentage: 50%;
+        @firstChildPercentage: 55%;
         display: flex;
         align-items: center;
 
@@ -69,7 +69,7 @@ li.MenuLink {
         align-items: center;
         justify-content: space-between;
         height: 2rem;
-        padding: 0 1.5rem 0 @offset;
+        padding: 0 1.25rem 0 @offset;
         border-radius: 0.25rem 0 0 0.25rem;
         text-decoration: none;
         cursor: pointer;
